# devops-in-ml-education

./: .gitignore  .pre-commit-config.yaml  README.md  future_work.md  pyproject.toml
.github/workflows/: create_autograder.yml  create_homework.yml  format.yml
src/environment/: environment_setup.md
src/teacher_files/: teacher_files.md
utils/autograder/: Dockerfile  build_autograder.py  parse_json_output.py
utils/build-conda/: Dockerfile  entrypoint.sh
utils/expected_outputs/: convert_to_pdf.py
utils/format/: check_no_output.py
utils/local/: create_expected_outputs.py  debug_student_code.py  test_autograder.py
utils/remove_solution_code/: remove_blank_cells.py  remove_solution_code_from_code.py  remove_solution_code_from_notebook.py
