[tool.poetry]
name = "HW2"
version = "0.1.0"
description = ""
authors = ["Gururaj Deshpande <gurudesh@gatech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nbqa = "^1.7.1"
autoflake = "^2.2.1"
pyupgrade = "^3.15.0"
black = "^23.12.0"
isort = "^5.13.2"
nbconvert = "^7.12.0"
poethepoet = "^0.24.4"
pyclean = "^2.7.6"
jupyter = "^1.0.0"
pdf-watermark = "^2.0.0"
astor = "^0.8.1"
nbformat = "^5.9.2"
pre-commit = "^3.6.0"
rich = "^13.7.0"
pdfkit = "^1.0.0"

[tool.isort]
profile = "black"

[tool.poe.tasks]
# Clean commands
clean = "pyclean src"

# Format subcommands
blk = "black src"
fmt = "isort src"
flake = "autoflake --remove-all-unused-imports --remove-unused-variables --in-place --recursive src"
nbqa_isort = "nbqa isort src/teacher_files/HW2_Solutions.ipynb"
nbqa_black = "nbqa black src/teacher_files/HW2_Solutions.ipynb"
nbqa_flake = "nbqa autoflake --remove-all-unused-imports --remove-unused-variables --in-place --recursive src/teacher_files/HW2_Solutions.ipynb"
nbqa_clear = "jupyter nbconvert --clear-output --inplace src/teacher_files/HW2_Solutions.ipynb"
nbqa = [
    "nbqa_isort",
    "nbqa_black",
    "nbqa_clear",
] # Removed flake check since it was removing solution code that shouldn't be removed

# Check subcommands
blk_check = "black src --check"
fmt_check = "isort -c src"
flake_check = "autoflake --remove-all-unused-imports --remove-unused-variables --check --recursive src"
nbqa_isort_check = "nbqa isort --check src/teacher_files/HW2_Solutions.ipynb"
nbqa_black_check = "nbqa black --check src/teacher_files/HW2_Solutions.ipynb"
nbqa_flake_check = "nbqa autoflake --remove-all-unused-imports --remove-unused-variables --check --recursive src/teacher_files/HW2_Solutions.ipynb"
nbqa_check = [
    "nbqa_isort_check",
    "nbqa_black_check",
] # Removed flake check since it was removing solution code that shouldn't be removed
nbqa_clear_check = "poetry run python3 src/utils/format/check_no_output.py --notebook src/teacher_files/HW2_Solutions.ipynb"

# Main commands
format = [
    "blk",
    "fmt",
    "nbqa",
] # Removed flake check since it was removing solution code that shouldn't be removed
check = ["blk_check", "fmt_check", "nbqa_check", "nbqa_clear_check"]

# Build and test autograder
test_autograder = "python3 src/utils/local/test_autograder.py"

# Create expected outpust
create_expected_outputs = "python3 src/utils/local/create_expected_outputs.py"

# Debug student code
debug_student_code = "python3 src/utils/local/debug_student_code.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
